--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "fhfgf",
-    "slug": "fhfgf",
+    "name": "calmi",
+    "slug": "calmi",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "icon": "./assets/images/splash-icon.png",
+    "scheme": "calmi",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -13,14 +13,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/splash-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/icon.png"
     },
     "plugins": [
       "expo-router",
@@ -28,12 +28,25 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "imageWidth": 70,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-font"
     ],
+    "expo-font": {
+      "fonts": [
+        "./assets/fonts/Ubuntu-Bold.ttf",
+        "./assets/fonts/Ubuntu-BoldItalic.ttf",
+        "./assets/fonts/Ubuntu-Italic.ttf",
+        "./assets/fonts/Ubuntu-Light.ttf",
+        "./assets/fonts/Ubuntu-LightItalic.ttf",
+        "./assets/fonts/Ubuntu-Medium.ttf",
+        "./assets/fonts/Ubuntu-MediumItalic.ttf",
+        "./assets/fonts/Ubuntu-Regular.ttf"
+      ]
+    },
     "experiments": {
       "typedRoutes": true
     }
