--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.36",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "^17.0.8",
     "expo-font": "~13.0.4",
@@ -35,6 +38,7 @@
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
@@ -46,8 +50,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-av": "~15.0.2"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
