--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.36",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "^17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.17",
     "expo-splash-screen": "~0.29.22",
@@ -50,8 +50,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-linear-gradient": "~14.0.2"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -61,6 +60,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
+    "expo": "^52.0.46",
     "jest": "^29.2.1",
     "jest-expo": "^52.0.5",
     "react-test-renderer": "18.3.1",
